[package]
name = "dot-json2cypher-rs"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"]}
anyhow = "1"